Added controllers, docks, configs, middleware, routes, utils, database connector, main - now it will be time to go into bugfixing while testing the routes
