# main.go
@@ -3,31 +3,43 @@ package main
 import (
 	"fmt"
 
-	// docs are generated by Swag CLI, you have to import them.
-	// replace with your own docs folder, usually "github.com/username/reponame/docs"
+	"github.com/WellDoneIT90/SimpleRatingsApp/pkg/configs"
+	"github.com/WellDoneIT90/SimpleRatingsApp/pkg/middleware"
+	"github.com/WellDoneIT90/SimpleRatingsApp/pkg/routes"
+	"github.com/WellDoneIT90/SimpleRatingsApp/pkg/utils"
+	"github.com/gofiber/fiber/v2"
+
 	_ "github.com/WellDoneIT90/SimpleRatingsApp/docs"
+	_ "github.com/joho/godotenv/autoload"
 )
 
+// @title API
+// @version 1.0
+// @description This is an auto-generated API Docs.
+// @termsOfService http://swagger.io/terms/
+// @contact.name API Support
+// @contact.email your@mail.com
+// @license.name Apache 2.0
+// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name Authorization
+// @BasePath /api
 func main() {
 	fmt.Println("Ratings App in GO using Fiber and PostgreSQl deployed locally in Docker!")
 
-	// app := fiber.New()
+	config := configs.FiberConfig()
 
-	// app.Get("/swagger/*", swagger.HandlerDefault) // default
+	app := fiber.New(config)
 
-	// app.Get("/swagger/*", swagger.New(swagger.Config{ // custom
-	// 	URL:         "http://example.com/doc.json",
-	// 	DeepLinking: false,
-	// 	// Expand ("list") or Collapse ("none") tag groups by default
-	// 	DocExpansion: "none",
-	// 	// Prefill OAuth ClientId on Authorize popup
-	// 	OAuth: &swagger.OAuthConfig{
-	// 		AppName:  "OAuth Provider",
-	// 		ClientId: "21bb4edc-05a7-4afc-86f1-2e151e4ba6e2",
-	// 	},
-	// 	// Ability to change OAuth2 redirect uri location
-	// 	OAuth2RedirectUrl: "http://localhost:8080/swagger/oauth2-redirect.html",
-	// }))
+	middleware.FiberMiddleware(app)
 
-	// app.Listen(":8080")
+	// Routes
+	routes.SwaggerRoute(app)
+	routes.PublicRoutes(app)
+	routes.PrivateRoutes(app)
+	routes.NotFoundRoute(app)
+
+	// Start server with graceful shutdown
+	utils.StartServerWithGracefulShutdown(app)
 }
